--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -1,10 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <DefineConstants>FABLE_COMPILER</DefineConstants>
     </PropertyGroup>
     <ItemGroup>
+        <Compile Include="SharedView.fs" />
+        <Compile Include="CreateAuthor.fs" />
+        <Compile Include="Booklist.fs" />
         <None Include="index.html" />
         <None Include="paket.references" />
         <Compile Include="Index.fs" />
