--- a/Build.fsproj
+++ b/Build.fsproj
@@ -7,5 +7,8 @@
     <Compile Include="Helpers.fs" />
     <Compile Include="Build.fs" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Fable.Fetch" Version="2.6.0" />
+  </ItemGroup>
   <Import Project=".paket\Paket.Restore.targets" />
 </Project>
