--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,9 @@
   <ItemGroup>
     <None Include="paket.references" />
     <Compile Include="Server.fs" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Fable.Fetch" Version="2.6.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.fsproj" />
