--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -5,6 +5,7 @@
         <DefineConstants>FABLE_COMPILER</DefineConstants>
     </PropertyGroup>
     <ItemGroup>
+        <Compile Include="ApiProxy.fs" />
         <Compile Include="UrlListener.fs" />
         <Compile Include="CreateAuthor.fs" />
         <Compile Include="Booklist.fs" />
