--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -5,8 +5,8 @@
         <DefineConstants>FABLE_COMPILER</DefineConstants>
     </PropertyGroup>
     <ItemGroup>
+        <Compile Include="UrlType.fs" />
         <Compile Include="ApiProxy.fs" />
-        <Compile Include="UrlListener.fs" />
         <Compile Include="CreateAuthor.fs" />
         <Compile Include="BookDetails.fs" />
         <Compile Include="Booklist.fs" />
