fixed nested routes handling, added basic loading page

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -19,6 +19,7 @@
         <Compile Include="App.fs" />
     </ItemGroup>
     <ItemGroup>
+      <PackageReference Include="Feliz.Bulma.PageLoader" Version="3.0.0" />
       <PackageReference Include="Feliz.Router" Version="3.0.1" />
     </ItemGroup>
     <ItemGroup>
