--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "test:live": "webpack-dev-server --mode development --env test"
     },
     "dependencies": {
+        "bulma-pageloader": "^0.3.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
