--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -5,9 +5,11 @@
         <DefineConstants>FABLE_COMPILER</DefineConstants>
     </PropertyGroup>
     <ItemGroup>
+        <Compile Include="ViewUtils.fs" />
         <Compile Include="ApiProxy.fs" />
-        <Compile Include="CreateAuthor.fs" />
         <Compile Include="BookDetails.fs" />
+        <Compile Include="CreateAuthor.fs" />
+        <Compile Include="CreateBook.fs" />
         <Compile Include="Booklist.fs" />
         <None Include="index.html" />
         <None Include="paket.references" />
