--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -14,6 +14,8 @@
         <Compile Include="CreateBook.fs" />
         <Compile Include="EditBook.fs" />
         <Compile Include="Booklist.fs" />
+        <Compile Include="AuthorsIndex.fs" />
+        <Compile Include="BooksIndex.fs" />
         <None Include="index.html" />
         <None Include="paket.references" />
         <Compile Include="Index.fs" />
