--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -8,13 +8,14 @@
         <Compile Include="UrlLookup.fs" />
         <Compile Include="ViewUtils.fs" />
         <Compile Include="ApiProxy.fs" />
-        <Compile Include="BookDetails.fs" />
+        <Compile Include="Authorslist.fs" />
         <Compile Include="AuthorDetails.fs" />
         <Compile Include="CreateAuthor.fs" />
-        <Compile Include="CreateBook.fs" />
+        <Compile Include="AuthorsIndex.fs" />
         <Compile Include="EditBook.fs" />
         <Compile Include="Booklist.fs" />
-        <Compile Include="AuthorsIndex.fs" />
+        <Compile Include="BookDetails.fs" />
+        <Compile Include="CreateBook.fs" />
         <Compile Include="BooksIndex.fs" />
         <None Include="index.html" />
         <None Include="paket.references" />
