implemented react spinners as pageloaders

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -5,6 +5,7 @@
         <DefineConstants>FABLE_COMPILER</DefineConstants>
     </PropertyGroup>
     <ItemGroup>
+        <Compile Include="ReactSpinner.fs" />
         <Compile Include="UrlLookup.fs" />
         <Compile Include="ViewUtils.fs" />
         <Compile Include="ApiProxy.fs" />
